# JudgeYourPrompt

./: .gitignore  LICENSE  README.md  docker-compose.yaml  package-lock.json
app/: alembic.ini  main.py  pyproject.toml
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/dependencies/: request.py  security.py
app/api/v1/routers/: user.py
app/database/: env.py
app/database/versions/: 54e8ea53d606_add_user_model.py  8ddc6dd8dcb3_add_unique_to_user_of_email.py  ffd345695721_add_novel_model.py
app/factory/: novel.py  user.py
app/model/: novel.py  user.py
app/repository/: base.py  novel.py  user.py  utils.py
app/schema/: novel.py  security.py  user.py
app/service/: base.py  novel.py  token.py  user.py
app/session/: base_settings.py  manager.py  transactional.py
client/: .eslintrc  .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.eslint.json
client/src/: App.tsx  axios.ts
client/src/home/: edit-home.tsx  entire-home.tsx
client/src/home/components/: index.ts  left-drawer.tsx  nav-bar.tsx
client/src/home/components/editor/: custom-toolbar.tsx  react-editor.tsx
client/src/home/components/profile/: my-profile.tsx
client/src/store/: index.ts  sotre.ts  store.ts
client/src/store/login/: login.ts  register.ts  registerUser.ts  regiterNeed.ts
client/src/store/opener/: opener.ts
client/src/user/: user-home.tsx
client/src/user/axios/: LoginUser.ts
client/src/user/components/: login.tsx  register-modal.tsx  register.tsx
